--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,6 @@
-
+#ignore .idea
+.idea/workspace.xml
+.idea/tasks.xml
 #ignore thumbnails created by windows
 Thumbs.db
 #Ignore files build by Visual Studio
