--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,7 @@ UML/*.bak
 UML/AnalystComparer.vpp.bak_005d
 UML/AnalystComparer.vpp.bak_006d
 UML/AnalystComparer.vpp.bak_007d
+UML/AnalystComparer.vpp.bak_008d
+UML/AnalystComparer.vpp.bak_009f
+UML/AnalystComparer.vpp.bak_010d
+UML/AnalystComparer.vpp.bak_011d
