Redesigned UML, Analyst.h, and History.h so functions are closer to the data they use

--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,4 @@ UML/AnalystComparer.vpp.bak_009f
 UML/AnalystComparer.vpp.bak_010d
 UML/AnalystComparer.vpp.bak_011d
 UML/AnalystComparer.vpp.bak_012d
+UML/AnalystComparer.vpp.bak_013d
