Implemented and tested the computeStockPerformance function in History.cpp

--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,4 @@ UML/AnalystComparer.vpp.bak_010d
 UML/AnalystComparer.vpp.bak_011d
 UML/AnalystComparer.vpp.bak_012d
 UML/AnalystComparer.vpp.bak_013d
+UML/AnalystComparer.vpp.bak_014d
