Updated UML diagram, renamed private member var history to _history

--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,9 @@ UML/AnalystComparer.vpp.bak_011d
 UML/AnalystComparer.vpp.bak_012d
 UML/AnalystComparer.vpp.bak_013d
 UML/AnalystComparer.vpp.bak_014d
+UML/.AnalystComparer.vpp.lck
+UML/AnalystComparer.vpp.bak_015d
+UML/AnalystComparer.vpp.bak_016d
+UML/AnalystComparer.vpp.bak_017d
+UML/AnalystComparer.vpp.bak_018d
+UML/AnalystComparer.vpp.bak_019d
