--- a/.gitignore
+++ b/.gitignore
@@ -47,3 +47,6 @@ UML/AnalystComparer.vpp.bak_016d
 UML/AnalystComparer.vpp.bak_017d
 UML/AnalystComparer.vpp.bak_018d
 UML/AnalystComparer.vpp.bak_019d
+UML/AnalystComparer.vpp.bak_020d
+UML/AnalystComparer.vpp.bak_021d
+UML/AnalystComparer.vpp.bak_022d
