Finalized UML Diagram, barring any silly mistakes

--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,5 @@ UML/AnalystComparer.vpp.bak_019d
 UML/AnalystComparer.vpp.bak_020d
 UML/AnalystComparer.vpp.bak_021d
 UML/AnalystComparer.vpp.bak_022d
+UML/AnalystComparer.vpp.bak_023d
+UML/AnalystComparer.vpp.bak_024d
