--- a/Bingo/CMakeLists.txt
+++ b/Bingo/CMakeLists.txt
@@ -4,10 +4,11 @@ project(Bingo)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 
 set(SOURCE_FILES
-            UserInterface.cpp UserInterface.h
-            Deck.cpp Deck.h
-            MenuOption.cpp MenuOption.h
-            Menu.cpp Menu.h)
+        UserInterface.cpp UserInterface.h
+        Deck.cpp Deck.h
+        MenuOption.cpp MenuOption.h
+        Menu.cpp Menu.h
+        Card.cpp Card.h)
 
 add_executable(Bingo main.cpp ${SOURCE_FILES})
 
