Added test files for Deck, Card, and CardCell to be implemented later

--- a/Bingo/CMakeLists.txt
+++ b/Bingo/CMakeLists.txt
@@ -15,7 +15,10 @@ add_executable(Bingo main.cpp ${SOURCE_FILES})
 
 set(TEST_FILES
         Testing/MenuTester.cpp Testing/MenuTester.h
-        Testing/MenuOptionTester.cpp Testing/MenuOptionTester.h)
+        Testing/MenuOptionTester.cpp Testing/MenuOptionTester.h
+        Testing/DeckTester.cpp Testing/DeckTester.h
+        Testing/CardTester.cpp Testing/CardTester.h
+        Testing/CardCellTester.cpp Testing/CardCellTester.h)
 
 add_executable(Test Testing/testMain.cpp ${SOURCE_FILES} ${TEST_FILES})
 
