Added Dictionary and KeyValue classes to the project

--- a/GenericDictionary/CMakeLists.txt
+++ b/GenericDictionary/CMakeLists.txt
@@ -4,7 +4,8 @@ project(GenericDictionary)
 set(CMAKE_CXX_STANDARD 11)
 
 set(SOURCE_FILES
-        )
+        Dictionary.cpp Dictionary.h
+        KeyValue.cpp KeyValue.h)
 add_executable(GenericDictionary main.cpp ${SOURCE_FILES})
 
 set(TEST_FILES
