Wrote an example usage of the Dictionary class in main.cpp

--- a/GenericDictionary/CMakeLists.txt
+++ b/GenericDictionary/CMakeLists.txt
@@ -3,10 +3,13 @@ project(GenericDictionary)
 
 set(CMAKE_CXX_STANDARD 11)
 
+set(INPUT_FILES
+        countrynames.txt)
+
 set(SOURCE_FILES
         Dictionary.h
         KeyValue.h)
-add_executable(GenericDictionary main.cpp ${SOURCE_FILES})
+add_executable(GenericDictionary main.cpp ${INPUT_FILES} ${SOURCE_FILES})
 
 set(TEST_FILES
         Testing/DictionaryTester.cpp Testing/DictionaryTester.h Testing/KeyValueTester.cpp Testing/KeyValueTester.h)
